<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C81D0"
    tools:context=".login.LoginMainFragment">

    <EditText
        android:id="@+id/password"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/ic_bg_email_pass"
        android:fontFamily="@font/proxima_nova_regular"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:paddingStart="30dp"
        android:paddingEnd="45dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/bustle"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="126dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/bustle"
        android:textColor="#FFFFFF"
        android:textSize="54sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/ic_bg_email_pass"
        android:fontFamily="@font/proxima_nova_regular"
        android:gravity="center"
        android:hint="@string/example_gmail_com"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:paddingStart="30dp"
        android:paddingEnd="45dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bustle" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/sign_in_google_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="333dp"
        android:layout_height="62dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="#232F3D"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_icon_google"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <ImageView
        android:id="@+id/check_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/email"
        app:layout_constraintVertical_bias="0.535"
        app:srcCompat="@drawable/ic_icon_check"
        app:tint="#27AE60"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:layout_constraintVertical_bias="0.535"
        app:srcCompat="@drawable/ic_icon_eye"
        app:tint="#FFFFFF"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_google_button" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/don_t_have_an_account"
        android:textColor="#f9f9f9"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_google_button" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/forgot_password"
        android:textColor="#f9f9f9"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>
